# photo-sorter

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Development.md  LICENSE  README.md  comparison  reproduce_behavior
.github/workflows/: ci.yaml
docs/: cli.md  db-schema.md
src/: album.rs  album_cmd.rs  classify.rs  db_cmd.rs  dedup.rs  exif.rs  exif_util.rs  extra_info.rs  file_type.rs  fs.rs  index_cmd.rs  info_cmd.rs  inspect.rs  main.rs  markdown.rs  markdown_cmd.rs  media.rs  media_file.rs  mp4_util.rs  progress.rs  supplemental_info.rs  sync_cmd.rs  takeout_reader.rs  terminal.rs  test_util.rs  track_util.rs  ui_cmd.rs  upload.rs  util.rs  zip_reader.rs
src/db_cmd/: db_schema_docs.rs
test/: Canon_40D.md  README.md  ic-album-sample.csv  metadata.json  test.sql  test1.jpeg.supplemental-metadata.json
test/takeout1/Google Photos/Photos from 2012/: metadata.json
test/takeout_basic/Google Photos/Holiday/: Canon_40D.jpg.supplemental-metadata.json  metadata.json
test/takeout_basic/Google Photos/Photos from 2024/: Hello.mp4.supplemental-metadata.json
