[package]
name = "photo-sorter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
anyhow = { version = "1.0.100" }
csv = { version = "1.3.1" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
sha256 = "1.6.0"
zip = "7.0.0"
chrono = "0.4.42"
file-format = "0.28.0"
status-line = "0.2.0"
yaml-rust2 = "0.11.0"
regex = "1.11.2"
strum_macros = "0.27.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
nom-exif = "2.6.0"
