[package]
name = "photo-sorter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
anyhow = { version = "1.0.100" }
csv = { version = "1.3.1" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
sha2 = "0.10"
zip = "7.0"
chrono = "0.4"
file-format = "0.28"
yaml-rust2 = "0.11"
regex = "1.11"
strum_macros = "0.27"
rusqlite = { version = "0.38", features = ["bundled"] }
nom-exif = "2.6"
hex = "0.4"
rayon = "1.11.0"
indicatif = "0.17"
tempfile = "3.25.0"
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
image = "0.25.5"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
